@@ -29,6 +29,9 @@ C-API
 Library
 -------
 
+- Issue #8729: Return NotImplemented from collections.Mapping.__eq__ when
+  comparing to a non-mapping.
+
 - Issue #8759: Fixed user paths in sysconfig for posix and os2 schemes.
 
 - Issue #1285086: Speed up urllib.quote and urllib.unquote for simple cases.
